@@ -67,7 +67,6 @@ reference:
   - meltAssay
   - relabundance
   - subsampleCounts
-  - subsetSamples
 - subtitle: Datasets
 - contents:
   - mia-datasets
